--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 *$py.class
 *.so
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -20,20 +21,23 @@ wheels/
 .installed.cfg
 *.egg
 
-# Virtual Environment
-env/
-venv/
-ENV/
-
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
+# Testing
+.coverage
+coverage.xml
+.pytest_cache/
+
+# Virtual Environment
+venv/
+ENV/
+
 # OS
 .DS_Store
 
 /tests/__pycache__/
-.pytest_cache/
 dbnn.egg-info/
